--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
             padding: 0;
         }
         .imgbox {
-            display: grid;
-            height: 200%;
+            display: flex;
+            height: 100%;
+            justify-content: center;
             margin: auto;
         }
         .center-fit {
-            max-width: 200%;
-            max-height: 100vh;
+            max-width: 100%;
+            max-height: 100%;
             margin: auto;
+            align-items: center;
         }
     </style>
     <meta charset="UTF-8" />
